--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 <footer>
     <p>&copy; 2024 Travel Planner</p>
 </footer>
+ <script src="assets/js/scrollreveal.min.js"></script>
 
 </body>
 </html>
