--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Travel Planner</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
 <header>
     <h1>Welcome to the Travel Planner</h1>
@@ -87,6 +96,13 @@
 </div>
 
 <script src="assets/js/scrollreveal.min.js"></script>
+<script src="scripts.js"></script>
+</body>
+</html>
+    <footer>
+    <p>&copy; 2024 Travel Planner</p>
+</footer>
+
 <script src="scripts.js"></script>
 </body>
 </html>
