--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Planner</title>
@@ -69,7 +73,7 @@
         <label for="destination">Destination:</label><br>
         <input type="text" id="destination" name="destination" required><br>
         <label for="date">Travel Dates:</label><br>
-        <input type="text" id="date" name="date" required><br>
+        <input type="text" id="date" name="date" class="date-picker" required><br>
         <label for="preferences">Preferences:</label><br>
         <textarea id="preferences" name="preferences"></textarea><br>
         <input type="submit" value="Submit">
