--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+`<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -38,8 +38,7 @@
 </div>
 
 <div class="container" id="destinations">
-    <h2>Explore Destinations</h2>
-    div class="container" id="destinations">
+    
     <h2>Explore Destinations</h2>
     <!-- Destination: Bengaluru -->
     <div class="destination">
@@ -86,6 +85,14 @@
     <p>Email: info@travelplanner.com</p>
     <p>Phone: 123-456-7890</p>
 </div>
+    <!-- index.html -->
+<nav>
+    <a href="index.html">Home</a>
+    <a href="destinations.html">Destinations</a>
+    <a href="plan.html">Plan Your Trip</a>
+    <a href="contact.html">Contact Us</a>
+</nav>
+
 
 <footer>
     <p>&copy; 2024 Travel Planner</p>
