--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 <header>
     <h1>Welcome to the Travel Planner</h1>
 </header>
+    <nav>
+    <a href="#home">Home</a>
+    <a href="#destinations">Destinations</a>
+    <a href="#plan">Plan Your Trip</a>
+    <a href="#contact">Contact Us</a>
+</nav>
+
 <div class="container" id="home">
     <h2>Discover Your Next Adventure</h2>
     <p>Welcome to our Travel Planner website! Here, you can explore exciting destinations, plan your trips, and get all the information you need for an unforgettable journey.</p>
